@@ -2,7 +2,7 @@
 ## vim: ft=conf sw=4
 ## =============================================================================
 ## 
-# @(#) $RCSfile: lis.conf,v $ $Name:  $($Revision: 0.9.2.4 $) $Date: 2006/12/18 10:51:03 $
+# @(#) $RCSfile: lis.conf,v $ $Name:  $($Revision: 0.9.2.5 $) $Date: 2007/03/08 11:39:03 $
 ##
 ## -----------------------------------------------------------------------------
 ##
@@ -47,7 +47,7 @@
 ##
 ## -----------------------------------------------------------------------------
 ##
-## Last Modified $Date: 2006/12/18 10:51:03 $ by $Author: brian $
+## Last Modified $Date: 2007/03/08 11:39:03 $ by $Author: brian $
 ##
 ## =============================================================================
 
@@ -65,18 +65,18 @@ driver	sl-acb56    sl_acb56	*	4
 ## Object name specifications
 ## -----------------------------------------------------------
 ##	type	name	    object name
-objname	driver	sdl-acb56   sdl-acb56
-objname	driver	sdt-acb56   sdt-acb56
-objname	driver	sl-acb56    sl-acb56
+objname	driver	sdl-acb56   sdl_acb56
+objname	driver	sdt-acb56   sdt_acb56
+objname	driver	sl-acb56    sl_acb56
 
 
 ##
 ## Loadable specifications
 ## -----------------------------------------------------------
 ##		name
-loadable	sdl-acb56
-loadable	sdt-acb56
-loadable	sl-acb56
+loadable	sdl_acb56
+loadable	sdt_acb56
+loadable	sl_acb56
 
 ##   Node specifications
 ## -----------------------------------------------------------
