@@ -1,7 +1,7 @@
 ## vim: ft=config comments=b\:#,b\:##,b\:#\! formatoptions+=tcqlor
 ## =============================================================================
 ## 
-#@WITH_SIGTRAN_TRUE@ @(#) $RCSfile: lis.conf.in,v $ $Name:  $($Revision: 0.9.2.1 $) $Date: 2006/12/18 10:40:29 $
+#@WITH_SIGTRAN_TRUE@ @(#) $RCSfile: lis.conf.in,v $ $Name:  $($Revision: 0.9.2.2 $) $Date: 2007/03/08 11:39:07 $
 ##
 ## -----------------------------------------------------------------------------
 ##
@@ -46,7 +46,7 @@
 ##
 ## -----------------------------------------------------------------------------
 ##
-## Last Modified $Date: 2006/12/18 10:40:29 $ by $Author: brian $
+## Last Modified $Date: 2007/03/08 11:39:07 $ by $Author: brian $
 ##
 ## =============================================================================
 
@@ -62,14 +62,14 @@
 ## Object name specifications
 ## -----------------------------------------------------------
 ##	type	name	    object name
-@WITH_SIGTRAN_TRUE@@WITH_SIGTRAN_TRUE@objname	module	m2pa-sl	    m2pa-sl
+@WITH_SIGTRAN_TRUE@@WITH_SIGTRAN_TRUE@objname	module	m2pa-sl	    m2pa_sl
 
 
 ##
 ## Loadable specifications
 ## -----------------------------------------------------------
 ##		name
-@WITH_SIGTRAN_TRUE@@WITH_SIGTRAN_TRUE@loadable	m2pa-sl
+@WITH_SIGTRAN_TRUE@@WITH_SIGTRAN_TRUE@loadable	m2pa_sl
 
 ##   Node specifications
 ## -----------------------------------------------------------
