@@ -1,6 +1,6 @@
 ## =============================================================================
 ## 
-# @(#) $RCSfile: lis.conf,v $ $Name:  $($Revision: 0.9.2.5 $) $Date: 2006/12/18 10:51:13 $
+# @(#) $RCSfile: lis.conf,v $ $Name:  $($Revision: 0.9.2.6 $) $Date: 2007/03/08 11:39:08 $
 ##
 ## -----------------------------------------------------------------------------
 ##
@@ -45,7 +45,7 @@
 ##
 ## -----------------------------------------------------------------------------
 ##
-## Last Modified $Date: 2006/12/18 10:51:13 $ by $Author: brian $
+## Last Modified $Date: 2007/03/08 11:39:08 $ by $Author: brian $
 ##
 ## =============================================================================
 
@@ -65,12 +65,16 @@ module	mtp-tpi	    mtp_tpi
 ## -----------------------------------------------------------
 ##	type	name	    object name
 objname	driver	mtp	    mtp
-objname	driver	mtp-min	    mtp-min
+objname	driver	mtp-min	    mtp_min
+objname	module	mtp-npi	    mtp_npi
+objname	module	mtp-tpi	    mtp_tpi
 
 ## Loadable specifications
 ## -----------------------------------------------------------
 loadable mtp
-loadable mtp-min
+loadable mtp_min
+loadable mtp_npi
+loadable mtp_tpi
 
 ## Node specifications
 ## -----------------------------------------------------------
