@@ -2,7 +2,7 @@
 ## vim: ft=conf sw=4
 ## =============================================================================
 ## 
-# @(#) $RCSfile: lis.conf,v $ $Name:  $($Revision: 0.9.2.5 $) $Date: 2006/12/18 10:51:15 $
+# @(#) $RCSfile: lis.conf,v $ $Name:  $($Revision: 0.9.2.6 $) $Date: 2007/03/08 11:39:09 $
 ##
 ## -----------------------------------------------------------------------------
 ##
@@ -47,7 +47,7 @@
 ##
 ## -----------------------------------------------------------------------------
 ##
-## Last Modified $Date: 2006/12/18 10:51:15 $ by $Author: brian $
+## Last Modified $Date: 2007/03/08 11:39:09 $ by $Author: brian $
 ##
 ## =============================================================================
 
@@ -63,14 +63,14 @@ module	mx-sdl	    mx_sdl
 ## Object name specifications
 ## -----------------------------------------------------------
 ##	type	name	    object name
-objname	module	mx-sdl	    mx-sdl
+objname	module	mx-sdl	    mx_sdl
 
 
 ##
 ## Loadable specifications
 ## -----------------------------------------------------------
 ##		name
-loadable	mx-sdl
+loadable	mx_sdl
 
 ##   Node specifications
 ## -----------------------------------------------------------
