@@ -2,7 +2,7 @@
 ## vim: ft=conf sw=4
 ## =============================================================================
 ## 
-# @(#) $RCSfile: lis.conf,v $ $Name:  $($Revision: 0.9.2.4 $) $Date: 2006/12/18 10:51:17 $
+# @(#) $RCSfile: lis.conf,v $ $Name:  $($Revision: 0.9.2.5 $) $Date: 2007/03/08 11:39:10 $
 ##
 ## -----------------------------------------------------------------------------
 ##
@@ -47,7 +47,7 @@
 ##
 ## -----------------------------------------------------------------------------
 ##
-## Last Modified $Date: 2006/12/18 10:51:17 $ by $Author: brian $
+## Last Modified $Date: 2007/03/08 11:39:10 $ by $Author: brian $
 ##
 ## =============================================================================
 
@@ -72,7 +72,6 @@ objname	module	spm	    spm
 ## Loadable specifications
 ## -----------------------------------------------------------
 ##	    name
-loadable    sdl-mux
 loadable    sdl
 loadable    spm
 
