@@ -2,7 +2,7 @@
 ## vim: ft=conf sw=4
 ## =============================================================================
 ## 
-# @(#) $RCSfile: lis.conf,v $ $Name:  $($Revision: 0.9.2.5 $) $Date: 2006/12/27 16:35:55 $
+# @(#) $RCSfile: lis.conf,v $ $Name:  $($Revision: 0.9.2.6 $) $Date: 2007/03/08 11:39:12 $
 ##
 ## -----------------------------------------------------------------------------
 ##
@@ -47,7 +47,7 @@
 ##
 ## -----------------------------------------------------------------------------
 ##
-## Last Modified $Date: 2006/12/27 16:35:55 $ by $Author: brian $
+## Last Modified $Date: 2007/03/08 11:39:12 $ by $Author: brian $
 ##
 ## =============================================================================
 
@@ -61,26 +61,28 @@ driver	slm	    slm		*
 ## -----------------------------------------------------------
 ##	name	    prefix
 module	sl	    sl
-module	sm_mod	    sm_mod
 module	slpmod	    slpmod
+module	sm_mod	    sm_mod
 
 ## Object name specifications
 ## -----------------------------------------------------------
 ##	type	name	    object name
+objname	driver	sl-mux	    sl_mux
+objname	driver	slm	    slm
 objname	module	sl	    sl
 objname	module	slpmod	    slpmod
-objname	driver	sl-mux	    sl-mux
-objname	driver	slm	    slm
+objname	module	sm_mod	    sm_mod
 
 
 ##
 ## Loadable specifications
 ## -----------------------------------------------------------
 ##		name
+loadable	sl_mux
+loadable	slm
 loadable	sl
 loadable	slpmod
-loadable	sl-mux
-loadable	slm
+loadable	sm_mod
 
 ##   Node specifications
 ## -----------------------------------------------------------
