@@ -2,7 +2,7 @@
 ## vim: ft=conf sw=4
 ## =============================================================================
 ## 
-#@WITH_SIGTRAN_TRUE@ @(#) $RCSfile: lis.conf.in,v $ $Name:  $($Revision: 0.9.2.1 $) $Date: 2006/12/18 10:40:32 $
+#@WITH_SIGTRAN_TRUE@ @(#) $RCSfile: lis.conf.in,v $ $Name:  $($Revision: 0.9.2.2 $) $Date: 2007/03/08 11:39:13 $
 ##
 ## -----------------------------------------------------------------------------
 ##
@@ -47,7 +47,7 @@
 ##
 ## -----------------------------------------------------------------------------
 ##
-## Last Modified $Date: 2006/12/18 10:40:32 $ by $Author: brian $
+## Last Modified $Date: 2007/03/08 11:39:13 $ by $Author: brian $
 ##
 ## =============================================================================
 
@@ -64,14 +64,14 @@
 ## Object name specifications
 ## -----------------------------------------------------------
 ##	type	name	    object name
-@WITH_SIGTRAN_TRUE@@WITH_SIGTRAN_TRUE@objname	module	sdt-tpi	    sdt-tpi
-@WITH_SIGTRAN_TRUE@@WITH_SIGTRAN_TRUE@objname	module	sl-tpi	    sl-tpi
+@WITH_SIGTRAN_TRUE@@WITH_SIGTRAN_TRUE@objname	module	sdt-tpi	    sdt_tpi
+@WITH_SIGTRAN_TRUE@@WITH_SIGTRAN_TRUE@objname	module	sl-tpi	    sl_tpi
 
 ## Loadable specifications
 ## -----------------------------------------------------------
 ##	    name
-@WITH_SIGTRAN_TRUE@@WITH_SIGTRAN_TRUE@loadable    sdt-tpi
-@WITH_SIGTRAN_TRUE@@WITH_SIGTRAN_TRUE@loadable    sl-tpi
+@WITH_SIGTRAN_TRUE@@WITH_SIGTRAN_TRUE@loadable    sdt_tpi
+@WITH_SIGTRAN_TRUE@@WITH_SIGTRAN_TRUE@loadable    sl_tpi
 
 ## Node specifications
 ## -----------------------------------------------------------
