@@ -2,7 +2,7 @@
 ## vim: ft=conf sw=4
 ## =============================================================================
 ## 
-#@WITH_SIGTRAN_TRUE@ @(#) $RCSfile: lis.conf.in,v $ $Name:  $($Revision: 0.9.2.1 $) $Date: 2006/12/18 10:40:33 $
+#@WITH_SIGTRAN_TRUE@ @(#) $RCSfile: lis.conf.in,v $ $Name:  $($Revision: 0.9.2.2 $) $Date: 2007/03/08 11:39:14 $
 ##
 ## -----------------------------------------------------------------------------
 ##
@@ -47,7 +47,7 @@
 ##
 ## -----------------------------------------------------------------------------
 ##
-## Last Modified $Date: 2006/12/18 10:40:33 $ by $Author: brian $
+## Last Modified $Date: 2007/03/08 11:39:14 $ by $Author: brian $
 ##
 ## =============================================================================
 
@@ -65,16 +65,16 @@
 ## Object name specifications
 ## -----------------------------------------------------------
 ##	type	name	    object name
-@WITH_SIGTRAN_TRUE@@WITH_SIGTRAN_TRUE@objname	module	sdl-sctp    sdl-sctp
-@WITH_SIGTRAN_TRUE@@WITH_SIGTRAN_TRUE@objname	module	sdt-sctp    sdt-sctp
-@WITH_SIGTRAN_TRUE@@WITH_SIGTRAN_TRUE@objname	module	sl-sctp	    sl-sctp
+@WITH_SIGTRAN_TRUE@@WITH_SIGTRAN_TRUE@objname	module	sdl-sctp    sdl_sctp
+@WITH_SIGTRAN_TRUE@@WITH_SIGTRAN_TRUE@objname	module	sdt-sctp    sdt_sctp
+@WITH_SIGTRAN_TRUE@@WITH_SIGTRAN_TRUE@objname	module	sl-sctp	    sl_sctp
 
 ## Loadable specifications
 ## -----------------------------------------------------------
 ##	    name
-@WITH_SIGTRAN_TRUE@@WITH_SIGTRAN_TRUE@loadable    sdl-sctp
-@WITH_SIGTRAN_TRUE@@WITH_SIGTRAN_TRUE@loadable    sdt-sctp
-@WITH_SIGTRAN_TRUE@@WITH_SIGTRAN_TRUE@loadable    sl-sctp
+@WITH_SIGTRAN_TRUE@@WITH_SIGTRAN_TRUE@loadable    sdl_sctp
+@WITH_SIGTRAN_TRUE@@WITH_SIGTRAN_TRUE@loadable    sdt_sctp
+@WITH_SIGTRAN_TRUE@@WITH_SIGTRAN_TRUE@loadable    sl_sctp
 
 ## Node specifications
 ## -----------------------------------------------------------
