@@ -1,6 +1,6 @@
 ## =============================================================================
 ## 
-# @(#) $RCSfile: lis.conf,v $ $Name:  $($Revision: 0.9.2.7 $) $Date: 2006/12/18 10:51:27 $
+# @(#) $RCSfile: lis.conf,v $ $Name:  $($Revision: 0.9.2.8 $) $Date: 2007/03/08 11:39:15 $
 ##
 ## -----------------------------------------------------------------------------
 ##
@@ -45,7 +45,7 @@
 ##
 ## -----------------------------------------------------------------------------
 ##
-## Last Modified $Date: 2006/12/18 10:51:27 $ by $Author: brian $
+## Last Modified $Date: 2007/03/08 11:39:15 $ by $Author: brian $
 ##
 ## =============================================================================
 
@@ -71,33 +71,33 @@ module	ch-sdl	    ch_sdl
 ## Object name specifications
 ## -----------------------------------------------------------
 ##	type	name	    object name
-objname driver	x400p	    x400p-ss7
-objname driver	x400p-sdl   sdl-x400p
-objname driver	x400p-sdt   sdt-x400p
-objname driver	x400p-sl    sl-x400p
-objname	driver	x400p-mx    x400p-mx
-objname driver	x100p	    x100p-ss7
-objname driver	x100p-sdl   sdl-x100p
-objname driver	x100p-sdt   sdt-x100p
-objname driver	x100p-sl    sl-x100p
-objname	driver	x100p-mx    x100p-mx
-objname	module	ch-sdl	    ch-x400p
+objname driver	x400p	    x400p_ss7
+objname driver	x400p-sdl   sdl_x400p
+objname driver	x400p-sdt   sdt_x400p
+objname driver	x400p-sl    sl_x400p
+objname	driver	x400p-mx    x400p_mx
+objname driver	x100p	    x100p_ss7
+objname driver	x100p-sdl   sdl_x100p
+objname driver	x100p-sdt   sdt_x100p
+objname driver	x100p-sl    sl_x100p
+objname	driver	x100p-mx    x100p_mx
+objname	module	ch-sdl	    ch_x400p
 
 ## Loadable specifications
 ## -----------------------------------------------------------
 ##		name
-loadable	x400p-ss7
-loadable	sdl-x400p
-loadable	sdt-x400p
-loadable	sl-x400p
-loadable	x400p-mx
-loadable	x100p-ss7
-loadable	sdl-x100p
-loadable	sdt-x100p
-loadable	x100p-mx
-loadable	sl-x100p
-loadable	ch-x400p
-loadable	mx-x400p
+loadable	x400p_ss7
+loadable	sdl_x400p
+loadable	sdt_x400p
+loadable	sl_x400p
+loadable	x400p_mx
+loadable	x100p_ss7
+loadable	sdl_x100p
+loadable	sdt_x100p
+loadable	x100p_mx
+loadable	sl_x100p
+loadable	ch_x400p
+loadable	mx_x400p
 
 ## Node specifications
 ## -----------------------------------------------------------
